--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-<!--                 <version>0.6.3.201306030806</version> -->
-                <version>0.6.4-SNAPSHOT</version>
+                <version>0.6.3.201306030806</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
