--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,7 @@
       <groupId>org.ops4j.pax.tipi</groupId>
       <artifactId>org.ops4j.pax.tipi.junit</artifactId>
       <version>4.11.0.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
