--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <version>5.0.2</version>
   </parent>
 
+  <groupId>org.everit</groupId>
   <artifactId>org.everit.eventdispatcher</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
@@ -46,9 +47,9 @@
     <developerConnection>scm:git:https://github.com/everit-org/${projectpath}.git</developerConnection>
     <url>https://github.com/everit-org/${projectpath}</url>
   </scm>
-  
+
   <url>http://everit.org</url>
-  
+
   <developers>
     <developer>
       <name>Everit Team</name>
